// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feature: My Account Dropdown Component Scenario: Rendering My Account Dropdown with all props When logged in & more than one SoldTo account Then the snapshot should match 1`] = `
<div
  className="my-account-dropdown"
>
  <div
    className="my-account-dropdown__user-details"
  >
    <div
      className="my-account-dropdown__user-details__name"
    >
      Susan Corman
    </div>
    <div
      className="my-account-dropdown__user-details__account"
    >
      <span
        className="my-account-dropdown__user-details__account__name"
      >
        Pfizer Randolf,
      </span>
    </div>
    <a
      className="my-account-dropdown__user-details__switch-account"
      href="/content/waters/language-masters/en/switch.html?fromMenu=true"
      onClick={[Function]}
    >
      Switch Account
    </a>
  </div>
  <hr
    className="my-account-dropdown__hr"
  />
  <div
    className="my-account-dropdown__item-list"
    data-locator="my-account-dropdown-list"
  >
    <a
      className="my-account-dropdown__item-list--link dropdown__item-list__my-profile"
      data-locator="my-account-dropdown-list-items"
      href="/content/waters/language-masters/en/search.html"
      onClick={[Function]}
      target="_self"
    >
      <span>
        My Profile
      </span>
    </a>
  </div>
  <div
    className="my-account-dropdown__item-list"
    data-locator="my-account-dropdown-list"
  >
    <a
      className="my-account-dropdown__item-list--link dropdown__item-list__my-orders"
      data-locator="my-account-dropdown-list-items"
      href="/content/waters/language-masters/en/library.html"
      onClick={[Function]}
      target="_self"
    >
      <span>
        My Orders
      </span>
    </a>
  </div>
  <hr
    className="my-account-dropdown__hr"
  />
  <a
    className="my-account-dropdown__sign-in-out"
    data-locator="my-account-dropdown-sign-in-out"
    href="/content/waters/language-masters/en/signout.html"
    onClick={[Function]}
  >
    <div
      className="sign-in-out__icon"
    />
    Sign Out
  </a>
</div>
`;

exports[`Feature: My Account Dropdown Component Scenario: Rendering My Account Dropdown with all props When logged in & no SoldTo account Then the snapshot should match 1`] = `
<div
  className="my-account-dropdown"
>
  <div
    className="my-account-dropdown__user-details"
  >
    <div
      className="my-account-dropdown__user-details__name"
    >
      Susan Corman
    </div>
  </div>
  <hr
    className="my-account-dropdown__hr"
  />
  <div
    className="my-account-dropdown__item-list"
    data-locator="my-account-dropdown-list"
  >
    <a
      className="my-account-dropdown__item-list--link dropdown__item-list__my-profile"
      data-locator="my-account-dropdown-list-items"
      href="/content/waters/language-masters/en/search.html"
      onClick={[Function]}
      target="_self"
    >
      <span>
        My Profile
      </span>
    </a>
  </div>
  <div
    className="my-account-dropdown__item-list"
    data-locator="my-account-dropdown-list"
  >
    <a
      className="my-account-dropdown__item-list--link dropdown__item-list__my-orders"
      data-locator="my-account-dropdown-list-items"
      href="/content/waters/language-masters/en/library.html"
      onClick={[Function]}
      target="_self"
    >
      <span>
        My Orders
      </span>
    </a>
  </div>
  <hr
    className="my-account-dropdown__hr"
  />
  <a
    className="my-account-dropdown__sign-in-out"
    data-locator="my-account-dropdown-sign-in-out"
    href="/content/waters/language-masters/en/signout.html"
    onClick={[Function]}
  >
    <div
      className="sign-in-out__icon"
    />
    Sign Out
  </a>
</div>
`;

exports[`Feature: My Account Dropdown Component Scenario: Rendering My Account Dropdown with all props When logged in & only one SoldTo account Then the snapshot should match 1`] = `
<div
  className="my-account-dropdown"
>
  <div
    className="my-account-dropdown__user-details"
  >
    <div
      className="my-account-dropdown__user-details__name"
    >
      Susan Corman
    </div>
    <div
      className="my-account-dropdown__user-details__account"
    >
      <span
        className="my-account-dropdown__user-details__account__name"
      >
        Pfizer Randolf,
      </span>
    </div>
  </div>
  <hr
    className="my-account-dropdown__hr"
  />
  <div
    className="my-account-dropdown__item-list"
    data-locator="my-account-dropdown-list"
  >
    <a
      className="my-account-dropdown__item-list--link dropdown__item-list__my-profile"
      data-locator="my-account-dropdown-list-items"
      href="/content/waters/language-masters/en/search.html"
      onClick={[Function]}
      target="_self"
    >
      <span>
        My Profile
      </span>
    </a>
  </div>
  <div
    className="my-account-dropdown__item-list"
    data-locator="my-account-dropdown-list"
  >
    <a
      className="my-account-dropdown__item-list--link dropdown__item-list__my-orders"
      data-locator="my-account-dropdown-list-items"
      href="/content/waters/language-masters/en/library.html"
      onClick={[Function]}
      target="_self"
    >
      <span>
        My Orders
      </span>
    </a>
  </div>
  <hr
    className="my-account-dropdown__hr"
  />
  <a
    className="my-account-dropdown__sign-in-out"
    data-locator="my-account-dropdown-sign-in-out"
    href="/content/waters/language-masters/en/signout.html"
    onClick={[Function]}
  >
    <div
      className="sign-in-out__icon"
    />
    Sign Out
  </a>
</div>
`;

exports[`Feature: My Account Dropdown Component Scenario: Rendering My Account Dropdown with all props When logged out Then the snapshot should match 1`] = `
<div
  className="my-account-dropdown"
>
  <div
    className="my-account-dropdown__item-list"
    data-locator="my-account-dropdown-list"
  >
    <a
      className="my-account-dropdown__item-list--link dropdown__item-list__my-profile"
      data-locator="my-account-dropdown-list-items"
      href="/content/waters/language-masters/en/search.html"
      onClick={[Function]}
      target="_self"
    >
      <span>
        My Profile
      </span>
    </a>
  </div>
  <div
    className="my-account-dropdown__item-list"
    data-locator="my-account-dropdown-list"
  >
    <a
      className="my-account-dropdown__item-list--link dropdown__item-list__my-orders"
      data-locator="my-account-dropdown-list-items"
      href="/content/waters/language-masters/en/library.html"
      onClick={[Function]}
      target="_self"
    >
      <span>
        My Orders
      </span>
    </a>
  </div>
  <hr
    className="my-account-dropdown__hr"
  />
  <a
    className="my-account-dropdown__sign-in-out"
    data-locator="my-account-dropdown-sign-in-out"
    href="/content/waters/language-masters/en/signIn.html"
    onClick={[Function]}
    rel="nofollow"
  >
    <div
      className="sign-in-out__icon"
    />
    Sign In
  </a>
  <div
    className="my-account-dropdown__create-account"
    data-locator="my-account-dropdown-not-registered"
  >
    Not registered yet?
    <a
      class="cmp-button"
      data-locator="link-my-account-dropdown-create-account"
      href="/content/waters/language-masters/en/test.html"
      onClick={[Function]}
    >
      Create Account
    </a>
  </div>
</div>
`;
